@@ -1,4 +1,8 @@
 Changes with Apache 1.3b3
+  *) Invent new structure and associated methods to handle config file
+     reading. Add "custom" hook to use config file cfg_getline() on
+     something which is not a FILE*  [Martin Kraemer]
+
   *) Make single-exe Windows install. [Ben Laurie and Eric Esselink]
 
   *) Make CGI work under Win95. [Ben Laurie and Paul Sutton]
